[gd_scene load_steps=2 format=3 uid="uid://bbevniro0py6x"]

[ext_resource type="Script" uid="uid://his0ocllmxhl" path="res://Camera/camera_path.gd" id="1_ohued"]

[node name="CameraPath" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_ohued")

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
